-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.2
-
devenv: vs2013 express, windows 8.1 running under parallels on macosx.
phone: htc windows phone 8S, os 8.0.10327.77
-
-
db31a5009af21719c040b7f203c32fd821ae011e
Simple application listening for udp broadcasts. the qt example of this should reproduce.
slot connected to readyRead:
while (sock_->hasPendingDatagrams()) {
QByteArray datagram;
datagram.resize(sock_->pendingDatagramSize());
sock_->readDatagram(datagram.data(), datagram.size());
// ...
}
Crashes in QtNetworkd5.dll, access violation read of 0x00000000. I'm having trouble getting vs2013 giving me a callstack at present so can't be more precise.
Looking at code of QNativeSocketEngine::readDatagram it looks like implementation is also not complete and if it didn't crash would not actually write anything to the bytearray. based on looking at this version, perhaps this is not the right place to be looking:
https://qt.gitorious.org/qt/qtbase/source/63b5537e9ceb4604b78ad7468155407212339704:src/network/socket/qnativesocketengine_winrt.cpp#L529
For Gerrit Dashboard: QTBUG-42244 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
99508,6 | WinRT: Fill data in QUdpSocket::readDatagram | 5.4.0 | qt/qtbase | Status: MERGED | +2 | 0 |