WinRT: Fill data in QUdpSocket::readDatagram

There was still a TODO left in there and the data was never filled.
In addition to filling the data, some pointer checks for addr and port
were added.

Task-number: QTBUG-42244
Change-Id: I8e358b5544edcdb4077a52f433e4bc17d92014ce
Reviewed-by: Andrew Knight <andrew.knight@theqtcompany.com>